
info devices
  Show additional information about inferiors which are considered
  devices by GDB.  For devices, the description displayed by 'info
  inferiors' has been changed.  The new description displays them as a
  'device' together with their PCI slot and sub-device ID.  This allows
  one to uniquely identify devices in 'info inferiors' with devices
  displayed in 'info devices'.

* Changed commands

info threads [-gid] [-stopped] [ID]...
  This command now takes an optional flag, '-stopped', that causes only
  the stopped threads to be printed.  The flag can be useful to get a
  reduced list when there is a large number of unstopped threads.

thread apply thread-list|all|all-lanes -unavailable
  Command now defaults to applying only to available threads.  To
  restore previous behaviour of applying also to unavailable
  threads the option "-unavailable" is added.

* Add convenience variable `$_simd_lane`.

* Python API

  ** Added gdb.record.clear(). Clears the trace data of the current recording.
     This forces re-decoding of the trace for successive commands.

* MI changes

  ** New field in '-thread-info': 'kernel-instance-id'

     Added a new thread field to the '-thread-info' command.  If the thread is
     stopped, available, and the kernel-instance-id is defined for its arch,
     the new field contains a string with an identifier for each thread and
     is unique per kernel submission.  The term `kernel` refers to a function
     that is submitted to and runs on an appropriate device, e.g. a GPU device.

  ** New possible value "unavailable" for the "reason" field in "stopped"
     async record.

  ** New field in '-thread-info': 'thread-workgroup'

     Added a new field to the '-thread-info' command.  If the thread is
     stopped, available, and the workgroup is defined for its arch,
     the new field contains a string with 3D tuple: "x, y, z" that
     denotes the coordinates of the thread workgroup.

  ** '-break-insert -l'
