@@ -50,6 +50,7 @@ gdb_test "info locals"  [multi_line \
     "a = 101"   \
     "val1 = 1"  \
     "val2 = 2\t<shadowed: decl at line $val2_d1>"  \
+    "Use 'set print shadowed off' to hide shadowed variables." \
     ] "info locals first level"
 
 gdb_breakpoint $srcfile:$bp_line3
@@ -61,6 +62,7 @@ gdb_test "info locals" [multi_line \
     "a = 102"   \
     "val1 = 1\t<shadowed: decl at line $val1_d1>"  \
     "val2 = 2\t<shadowed: decl at line $val2_d1>"  \
+    "Use 'set print shadowed off' to hide shadowed variables." \
     ] "info locals second level"
 
 gdb_breakpoint $srcfile:$bp_line4
@@ -75,7 +77,20 @@ gdb_test "info locals" [multi_line \
     "a = 103"   \
     "val1 = 1\t<shadowed: decl at line $val1_d1>" \
     "val2 = 2\t<shadowed: decl at line $val2_d1>" \
+    "Use 'set print shadowed off' to hide shadowed variables." \
     ] "info locals at innermost level"
+
+gdb_test_no_output "set print shadowed off"
+
+gdb_test "info locals" [multi_line \
+    "val1 = 6"  \
+    "val2 = 7"  \
+    "val3 = 8"  \
+    "a = 103"   \
+    "Use 'set print shadowed on' to include shadowed variables." \
+    ] "info locals at innermost level with filtered out shadowed"
+
+gdb_test_no_output "set print shadowed on"
 
 gdb_breakpoint $srcfile:$bp_line5
 gdb_test "continue" ".*bp for locals 5.*" "continue to outermost level last"
